hotfix per department clients
- Migration V9 — drops item_categories + item_master.category_id; adds client_item_departments (per-client item→department map) + order_line_items.department_id; drops orders.department_id (backfills line dept from the old order dept first).
- Catalog — ItemCategory deleted entirely (domain, service, repo, JPA, /api/item-categories); items now carry only unit_id.
- Client / Atur Harga — POST /api/clients/{id}/prices now also takes departmentId and upserts the mapping (required for PER_DEPARTMENT, rejected for COMBINED); GET .../prices returns each item's department. Exposed cross-module via ClientPricingQuery.
- Order — department is line-level; one order can span departments. Public form groups items by department (no dropdown), each item's dept resolved server-side from the mapping; an unmapped item is rejected for PBS. Treatment stays whole-order.
- Billing — sync splits each order across its line departments, upserting one line per department bill and reconciling removals; findByOrderLine → findAllByOrderLine (an order can be on several bills).
- Dev seeds fixed (R__dev_seed.sql, R__dev_seed_billing.sql) so they don't reference the dropped category/order-dept columns.