@@ -17,45 +17,48 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 class OrderTest {
 
     private static Order newOrder(BigDecimal multiplier, Order.NewLine... lines) {
-        return Order.create("AYI-20260101-001", 1L, null, LocalDate.now(), null, multiplier,
+        return Order.create("AYI-20260101-001", 1L, LocalDate.now(), null, multiplier,
                 "Staff", null, null, List.of(lines), Instant.now());
+    }
+
+    private static Order.NewLine line(Long itemId, String qty, String price) {
+        return new Order.NewLine(itemId, new BigDecimal(qty), new BigDecimal(price), null);
     }
 
     @Test
     void subtotal_isQuantityTimesPriceTimesMultiplier() {
-        var order = newOrder(new BigDecimal("2.0"),
-                new Order.NewLine(10L, new BigDecimal("3"), new BigDecimal("5000")));
+        var order = newOrder(new BigDecimal("2.0"), line(10L, "3", "5000"));
 
         assertThat(order.getLineItems()).hasSize(1);
-        assertThat(order.getLineItems().get(0).getSubtotal()).isEqualByComparingTo("30000.00");
+        assertThat(order.getLineItems().getFirst().subtotal()).isEqualByComparingTo("30000.00");
         assertThat(order.total()).isEqualByComparingTo("30000.00");
     }
 
     @Test
     void reguler_multiplierOne_leavesSubtotalUnscaled() {
         var order = newOrder(BigDecimal.ONE,
-                new Order.NewLine(10L, new BigDecimal("2"), new BigDecimal("4500")),
-                new Order.NewLine(20L, new BigDecimal("1"), new BigDecimal("1000")));
+                line(10L, "2", "4500"),
+                line(20L, "1", "1000"));
 
         assertThat(order.total()).isEqualByComparingTo("10000.00");
     }
 
     @Test
     void create_startsAtReceived() {
-        assertThat(newOrder(BigDecimal.ONE, new Order.NewLine(10L, BigDecimal.ONE, BigDecimal.TEN))
+        assertThat(newOrder(BigDecimal.ONE, line(10L, "1", "10"))
                 .getStatus()).isEqualTo(OrderStatus.RECEIVED);
     }
 
     @Test
     void create_rejectsEmptyLines() {
-        assertThatThrownBy(() -> Order.create("X", 1L, null, LocalDate.now(), null, BigDecimal.ONE,
+        assertThatThrownBy(() -> Order.create("X", 1L, LocalDate.now(), null, BigDecimal.ONE,
                 "Staff", null, null, List.of(), Instant.now()))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     void advanceStatus_allowsSingleForwardStep() {
-        var order = newOrder(BigDecimal.ONE, new Order.NewLine(10L, BigDecimal.ONE, BigDecimal.TEN));
+        var order = newOrder(BigDecimal.ONE, line(10L, "1", "10"));
         order.advanceStatus(OrderStatus.PROCESSING);
         order.advanceStatus(OrderStatus.DONE);
         assertThat(order.getStatus()).isEqualTo(OrderStatus.DONE);
@@ -63,14 +66,14 @@ class OrderTest {
 
     @Test
     void advanceStatus_rejectsSkippingAStep() {
-        var order = newOrder(BigDecimal.ONE, new Order.NewLine(10L, BigDecimal.ONE, BigDecimal.TEN));
+        var order = newOrder(BigDecimal.ONE, line(10L, "1", "10"));
         assertThatThrownBy(() -> order.advanceStatus(OrderStatus.DONE))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     void advanceStatus_rejectsGoingBackwards() {
-        var order = newOrder(BigDecimal.ONE, new Order.NewLine(10L, BigDecimal.ONE, BigDecimal.TEN));
+        var order = newOrder(BigDecimal.ONE, line(10L, "1", "10"));
         order.advanceStatus(OrderStatus.PROCESSING);
         assertThatThrownBy(() -> order.advanceStatus(OrderStatus.RECEIVED))
                 .isInstanceOf(IllegalArgumentException.class);
@@ -78,7 +81,7 @@ class OrderTest {
 
     @Test
     void edit_allowedWhileProcessing() {
-        var order = newOrder(BigDecimal.ONE, new Order.NewLine(10L, BigDecimal.ONE, BigDecimal.TEN));
+        var order = newOrder(BigDecimal.ONE, line(10L, "1", "10"));
         order.advanceStatus(OrderStatus.PROCESSING);
         order.edit(LocalDate.now().plusDays(1), "updated", null);
         assertThat(order.getNotes()).isEqualTo("updated");
@@ -86,7 +89,7 @@ class OrderTest {
 
     @Test
     void edit_rejectedOnceDone() {
-        var order = newOrder(BigDecimal.ONE, new Order.NewLine(10L, BigDecimal.ONE, BigDecimal.TEN));
+        var order = newOrder(BigDecimal.ONE, line(10L, "1", "10"));
         order.advanceStatus(OrderStatus.PROCESSING);
         order.advanceStatus(OrderStatus.DONE);
         assertThatThrownBy(() -> order.edit(null, "x", null))
